# ragas

./: pyproject.toml
src/ragas/metrics/: _faithfulness.py  jlib.py
